src/assets/styles.css
html, body {
  height: 100%;
  width: 100%;
  margin: 0px;
  padding: 0px;
  color: #FEFEFE;
}

.container {
  width: 100%;
  height: 100%;
  background: linear-gradient(180deg,#1a1e5a 0,#122d98 100%);
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

.login-container {
  display: flex;
  flex-direction: column;
  align-items: space-between;
  justify-content: flex-start;
  width: 90%;
  height: 60%;
}

.identification-container {
  display: flex;
  flex-direction: column;
  align-items: space-between;
  justify-content: flex-start;
  width: 80%;
  height: 90%;
}

.header-container {
  
}

.inputText:focus {
  outline:none;
}

.bankselect-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.bank-item {
  width: 70% !important;
  height: 40px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  border-radius: 0px !important;
  border-bottom: 1px solid #1c94ca;
}

.bank-item-last {
  border-bottom-left-radius: 2px !important;
  border-bottom-right-radius: 2px !important;
  border-bottom: 0px solid #FAFAFA !important;
}

.choose-a-bank {
  width: 70% !important;
  height: 40px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  background-color: #FAFAFA !important;
  border-radius: 2px !important;
}

.border-radius {
  border-radius: 2px !important
}

.value-proposition {
  text-align: center;
  position: relative;
  line-height: 30px !important;
  top: 50px;
}

.value-tagline {
  text-align: center;
  position: fixed;
  bottom: 0px;
  left: 20px;
}

.safetycode-container {

}

.permission-container {
  display: flex;
  flex-direction: column;
  background-color: #FAFAFA;
  border-radius: 2px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
  color: #757575 !important;
  margin-bottom: 5px;
}

.permission-box {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  width: 95%;
  color: rgba(0,0,0,.54);
  padding: 10px;
  font-weight: 700;
}

.permission-description {
  display: flex;
  border-top: rgba(0, 0, 0, 0.1);
  padding: 10px;
  background-color: #f1f1f1
}

.received-permission-container {
  display: flex;
  flex-direction: column;
  background-color: #FAFAFA;
  border-radius: 2px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
  color: #757575 !important;
  margin-bottom: 5px;
}

.received-permission-box {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: left;
  width: 95%;
  color: rgba(0,0,0,.54);
  padding: 10px;
  font-weight: 700;
}

.received-permission-container-declined {
  display: flex;
  flex-direction: column;
  background-color: rgba(237, 61, 61, .5);
  border-radius: 2px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
  color: #757575 !important;
  margin-bottom: 5px;
}

.received-value {
  margin-top: 5px;
}

.declined-to-send {
  background-color: rgba(237, 61, 61, .5)
}

input {
  width: 100%;
}

input[type=checkbox] {
  height: 20px;
  width: 20px;
}

.mdl-textfield__label:after {
  background-color: yellow !important;
  /* bottom: 20px; */
  content: '';
  /* height: 2px; */
  left: 45%;
  position: absolute;
  /* transition-duration: .2s; */
  transition-timing-function: cubic-bezier(.4,0,.2,1);
  /* visibility: hidden; */
  width: 10px;
}

.centerMargin {
  margin-left: auto;
  margin-right: auto;
}

.inputTextStyle {
  border-bottom: 1.5px solid white;
  font-size:20px;
}

.inputTextStyle::placeholder {
  color:rgba(160,160,160,.5);
}

.applicant-congrats {
  margin-top: 25px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

h1 {
  font-size: 24px;
  text-align: center;
}

